--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+
+.solutions{
+  display: grid;
+  grid-template-columns: repeat(7,1fr);
+}
+
+.letters{
+  background: #acc0c5;
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content:space-evenly !important;
+  margin: 7px;
+  padding: 30px;
+  font-size: 50px;
+}
+button{
+  margin: 7px;
+}
+.finish{
+  background: #61dafb;
+  border: 1px solid black;
+  display: inline-block;
+  margin: 7px;
+  text-align: center;
+  justify-content: center;
+}
+.letter{
+  border: 4px solid #acc0c5;
+  justify-content: center;
+  text-align: center;
+}
+.score{
+  border: 1px solid black;
+  display: inline-block;
+  margin: 20px;
+  width: 100px;
+  background-color: rgb(186, 196, 204);
+}
